@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkMenu.c,v 1.41.2.2 2009/04/10 16:16:04 das Exp $
+ * RCS: @(#) $Id: tkMenu.c,v 1.41.2.3 2009/12/30 00:29:38 patthoyts Exp $
  */
 
 /*
@@ -2905,16 +2905,16 @@ MenuDoYPosition(
  *
  * GetIndexFromCoords --
  *
- *	Given a string of the form "@int", return the menu item corresponding
- *	to int.
+ *	Given a string of the form "@integer", return the menu item
+ *	corresponding to the provided y-coordinate in the menu window.
  *
  * Results:
  *	If int is a valid number, *indexPtr will be the number of the
- *	menuentry that is the correct height. If int is invaled, *indexPtr
+ *	menuentry that is the correct height. If int is invalid, *indexPtr
  *	will be unchanged. Returns appropriate Tcl error number.
  *
  * Side effects:
- *	If int is invalid, interp's result will set to NULL.
+ *	If int is invalid, interp's result will be set to NULL.
  *
  *----------------------------------------------------------------------
  */
@@ -2928,6 +2928,7 @@ GetIndexFromCoords(
 {
     int x, y, i;
     char *p, *end;
+    int x2, borderwidth, max;
 
     TkRecomputeMenu(menuPtr);
     p = string + 1;
@@ -2935,6 +2936,8 @@ GetIndexFromCoords(
     if (end == p) {
 	goto error;
     }
+    Tk_GetPixelsFromObj(interp, menuPtr->tkwin,
+	menuPtr->borderWidthPtr, &borderwidth);
     if (*end == ',') {
 	x = y;
 	p = end + 1;
@@ -2943,23 +2946,32 @@ GetIndexFromCoords(
 	    goto error;
 	}
     } else {
-	Tk_GetPixelsFromObj(interp, menuPtr->tkwin,
-		menuPtr->borderWidthPtr, &x);
+	x = borderwidth;
     }
 
+    *indexPtr = -1;
+
+    /* set the width of the final column to the remainder of the window 
+     * being aware of windows that may not be mapped yet.
+     */
+    max = Tk_IsMapped(menuPtr->tkwin) 
+      ? Tk_Width(menuPtr->tkwin) : Tk_ReqWidth(menuPtr->tkwin);
+    max -= borderwidth;
+
     for (i = 0; i < menuPtr->numEntries; i++) {
+	if (menuPtr->entries[i]->entryFlags & ENTRY_LAST_COLUMN) {
+	    x2 = max;
+	} else {
+	    x2 = menuPtr->entries[i]->x + menuPtr->entries[i]->width;
+	}
 	if ((x >= menuPtr->entries[i]->x) && (y >= menuPtr->entries[i]->y)
-		&& (x < (menuPtr->entries[i]->x + menuPtr->entries[i]->width))
+		&& (x < x2)
 		&& (y < (menuPtr->entries[i]->y
 		+ menuPtr->entries[i]->height))) {
+	    *indexPtr = i;
 	    break;
 	}
     }
-    if (i >= menuPtr->numEntries) {
-	/* i = menuPtr->numEntries - 1; */
-	i = -1;
-    }
-    *indexPtr = i;
     return TCL_OK;
 
   error:
